# show-voter

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  setup.cfg
api/: Dockerfile  alembic.ini  dependencies.py  main.py
api/core/: config.py
api/data/: color_202510231718.csv
api/db/: database.py
api/migrations/: env.py
api/migrations/versions/: 4e5726dd0e56_initial_tables.py  77d35d331348_add_model_for_colors.py  8c15b7343cae_add_vote_table.py  93c008b9ed85_add_poll_restrictions.py  aafae2c9142c_remove_active_from_poll.py  adccea39f34d_add_active_flags_for_polls_and_options.py
api/models/: __init__.py  poll.py  show.py  user.py
api/routers/: poll.py  show.py
api/schemas/: poll.py  show.py
api/services/: poll.py  show.py
api/src/core/: config.py  dependencies.py
api/src/db/: database.py
api/src/models/: __init__.py  color.py  poll.py  show.py  user.py  vote.py
api/src/routers/: color.py  poll.py  show.py
api/src/schemas/: color.py  poll.py  show.py  vote.py
api/src/services/: poll.py  show.py  vote.py
migrations/: env.py
migrations/versions/: a49ac3567835_add_poll_show_fk.py  ebddcb3942dd_initial_tables.py
ui/: .env  .env.production  .prettierrc.cjs  Dockerfile  Dockerfile.prod  eslint.config.js  package-lock.json  package.json  vite.config.ts
ui/nginx/: default.conf
ui/src/: Admin.tsx  AdminManageShow.tsx  App.tsx  Home.tsx  ManageShow.tsx  PollCreate.tsx  PollDisplay.tsx  PollVote.tsx  QRGenerator.tsx  ShowCreate.tsx  Vote.tsx  main.tsx
ui/src/constants/: app-base.ts  (+1 more)
(+4 files in other folders)
