[project]
name = "show-voter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "pre-commit>=4.2.0",
]
